<resources>
    <string name="app_name">QR App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="category_array">
        <item>Đồ khô</item>
        <item>Nước uống</item>
        <item>Đồ dùng</item>
        <item>a</item>
        <item>b</item>
        <item>c</item>
    </string-array>

    <string name="order">Đơn hàng</string>
    <string name="staff">Nhân viên</string>
    <string name="OK">Hoàn tất</string>
    <string name="order_detail">Chi tiết đơn hàng</string>
    <string name="price_detail">%sđ x %d</string>
    <string name="confirm_ok">Hoàn tất mua hàng</string>
    <string name="scan">Quét</string>
    <string name="add_product">Nhập kho</string>
    <string name="account">Tài khoản</string>
    <string name="product">Sản phẩm</string>
    <string name="quantity">Số lượng</string>
    <string name="total">Tổng</string>
    <string name="price">%s VNĐ</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="save">Lưu</string>
    <string name="property">Thuộc tính</string>
    <string name="add_property">Thêm thuộc tính</string>
    <string name="property_value">Giá trị</string>
    <string name="dd_mm_yyyy">%s</string>
    <string name="to">đến</string>
    <string name="history">Lịch sử</string>
    <string name="date_time">Thời gian</string>
    <string name="value">Giá trị</string>
    <string name="product_code">Mã sản phẩm</string>
    <string name="category">Danh mục</string>
    <string name="exp">Hạn sử dụng</string>
    <string name="mfg">Ngày sản xuất</string>
    <string name="manufacturer">Nhà sản xuất</string>
    <string name="name">Tên</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="old_password">Mật khẩu cũ</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="logout">Đăng xuất</string>
    <string name="price_">Giá</string>
    <string name="as_admin">Chủ shop</string>
    <string name="as_staff">Nhân viên</string>
</resources>
