<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.admin.order.OrderDetailFragment"
    android:orientation="vertical"
    android:background="#fff">
    <LinearLayout
        android:id="@+id/llActionBar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:elevation="3dp">
        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_detail"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="17sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/date_time"
            android:textColor="@color/colorRed"
            android:textSize="13sp"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:id="@+id/tvDateTime"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="00-00-0000"
            android:textColor="@color/colorRed"
            android:textSize="13sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/product"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="#000"
            android:gravity="center_vertical"
            android:paddingHorizontal="10dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/quantity"
            android:textSize="15sp"
            android:textColor="#000"
            android:textStyle="bold"
            android:gravity="center_vertical|end"
            android:paddingHorizontal="10dp"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvOrderDetail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:layout_marginVertical="15dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/total"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="#000"
            android:gravity="center_vertical"
            android:paddingHorizontal="10dp"/>
        <TextView
            android:id="@+id/tvTotal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="0"
            android:textSize="15sp"
            android:textColor="#000"
            android:textStyle="bold"
            android:gravity="center_vertical|end"
            android:paddingHorizontal="10dp"/>
    </LinearLayout>
</LinearLayout>