<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.staff.order.ScannerFragment">

    <com.nullexcom.qrscanner.QRScannerView
        android:id="@+id/scannerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/product"
                android:textColor="#000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/quantity"
                android:textColor="#000"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvOrder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/total"
                android:textColor="#000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="00000"
                android:textColor="#000"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/btnOK"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="7dp"
            android:background="@color/colorOrange"
            android:text="@string/OK"
            android:textColor="#fff" />
    </LinearLayout>
</LinearLayout>