<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.staff.StaffActivity"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:id="@+id/lnStaffFunction"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:elevation="5dp"
        android:background="#fff"
        android:weightSum="3"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/lnScanner"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:id="@+id/imgScan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_barcode"
                android:tint="@color/colorRed"/>
            <TextView
                android:id="@+id/tvScan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan"
                android:textColor="@color/colorRed"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnNewProduct"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:id="@+id/imgAddProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add" />
            <TextView
                android:id="@+id/tvAddProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_product"
                android:textColor="#000"
                android:textSize="12sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lnAccount"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:id="@+id/imgAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_account" />
            <TextView
                android:id="@+id/tvAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textColor="#000"
                android:textSize="12sp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>