<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.staff.order.ConfirmOrderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#fff">
        <LinearLayout
            android:id="@+id/llActionBar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:elevation="3dp">
            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="35dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_arrow_back_black_24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/product"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="#000"
                android:gravity="center_vertical"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/quantity"
                android:textSize="15sp"
                android:textColor="#000"
                android:textStyle="bold"
                android:gravity="center_vertical|end"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvOrder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/total"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="#000"
                android:gravity="center_vertical"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"/>
            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="0"
                android:textSize="15sp"
                android:textColor="#000"
                android:textStyle="bold"
                android:gravity="center_vertical|end"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"/>
        </LinearLayout>
        <Button
            android:id="@+id/btnOK"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/confirm_ok"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@color/colorOrange"
            android:textColor="#fff"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llDialogSucess"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99696969"
        android:gravity="center"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:background="@drawable/linearlayout_shape"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_tick"
                    android:tint="@color/colorOrange"
                    android:layout_marginBottom="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Thành công"
                    android:textColor="#000"
                    android:textSize="16sp"
                    android:layout_marginTop="15dp"/>
            </LinearLayout>
            <Button
                android:id="@+id/btnSucceed"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/button_shape"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="15dp"
                android:text="OK"
                android:textColor="#fff"/>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>